(Attempt to) prevent dark mode plugins from making the css ugly with dark borders

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -269,6 +269,15 @@ table {
 
 /* Desktops / Laptops */
 @media screen and (orientation: landscape) {
+	/* Prevent Dark Mode plugins from making the website's background a solid colour */
+	:root {
+		background-image: url('files/images/bg.webp');
+		background-repeat: repeat;
+		background-size: cover;
+		background-attachment: fixed;
+		background-color: #313131;
+	}
+	
 	body {
 		background-image: url('files/images/bg.webp');
 	}
